--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       
        <div class="topnav" id="myTopnav">
        <img class = "logoimg"src="logos/gracerich logo.png" alt=""> 
-       <a  class = "submenu" href="Gracerich Bakery.html" class="active"><i class="fa fa-house" aria-hidden="true"></i>Home</a>
+       <a  class = "submenu" href="index.html" class="active"><i class="fa fa-house" aria-hidden="true"></i>Home</a>
        <a class = "submenu"href="cont.html"><i class="fa fa-phone-square" aria-hidden="true"></i> Contact</a>
        <a class ="menu" href="Work with us.html" > Work With Us </a>
        
